--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 six==1.10.0
-Flask==0.11.1
+Flask>=0.12.3
 Jinja2==2.8
 MarkupSafe==0.23
 Werkzeug==0.11.10
@@ -19,7 +19,7 @@ sphinx==1.4.5
 sphinx-autobuild==0.6.0
 recommonmark==0.4.0
 sphinx_rtd_theme==0.1.9
-requests[security]==2.18.4
+requests[security]>=2.20.0
 requests-futures==0.9.7
 PySocks==1.5.6
 git+https://github.com/maddhatter/Flask-CacheBust.git@38d940cc4f18b5fcb5687746294e0360640a107e#egg=flask_cachebust
